# relasma

./: .gitignore  .vercelignore  README.md  eslint.config.js  index.html  package.json  requirements.txt  styles.css
api/: github.ts  music.py  production.ts  reminder.ts  text_to_speech.py
src/: bot.ts  local.ts  types.ts
src/birthday-reminder/: database.ts  index.ts  test.cpp
src/calculator/: database.ts  index.ts
src/chess/: index.ts
src/music/: index.ts
src/snake/: database.ts  index.ts
src/sokoban/: database.ts  index.ts
src/test-cpp/: CMakeLists.txt  CMakeLists1.txt  CMakeLists2.txt  CMakePresets.json  index.ts
src/test-cpp/src/: addon.cpp  main.cpp  test.cpp  worker.cpp
src/test-cpp/tests/: CMakeLists.txt  test.cpp
src/tic-tac-toe/: database.ts  index.ts
src/voice/: index.ts
src/weather/: index.ts
utils/: firebase-config.ts
utils/dictionary/: main.cpp  main.py
utils/emoji/: advance_scraper.py  category.json  main.py  raw_emoji.json
